# FastAPI-Template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  example.env  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: main.py  middleware.py
app/auth/: deps.py  router.py  schemas.py  service.py
app/common/: repository.py  schemas.py
app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/: base.py  registry.py  session.py
app/health/: router.py
app/tasks/: broker.py  scheduler.py
app/users/: models.py  repository.py  router.py  schemas.py  service.py  tasks.py
deployment/: Dockerfile  README.md  docker-compose.yml
deployment/prometheus/: prometheus.yml
docs/: 01-structure.md  02-config.md  03-database.md  04-auth.md  05-background-tasks.md  06-observability.md  07-deployment.md  08-cicd.md
docs/superpowers/plans/: 2026-07-05-fastapi-template.md
docs/superpowers/specs/: 2026-07-05-fastapi-template-design.md
migrations/: env.py
migrations/versions/: aacc39261e0d_create_users_table.py
scripts/: seed.py
tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_config.py  test_db.py  test_exceptions.py  test_health.py  test_logging.py  test_repository.py  test_security.py  test_seed.py  test_tasks.py  test_user_model.py  test_users_api.py
